# SmartRedirection

./: CMakeLists.txt  CMakeSettings.json
Plugins/: CMakeLists.txt  CMakeSettings.json
Plugins/browser/: CMakeLists.txt  browser.cpp  browser.h
Plugins/lang/: CMakeLists.txt  language.cpp  language.h
Plugins/time/: CMakeLists.txt  time.cpp  time.h
doxygen/logger_service/html/: _chain_message_handler_8cpp.html  _chain_message_handler_8cpp__incl.map  _chain_message_handler_8cpp__incl.md5  _chain_message_handler_8h.html  _chain_message_handler_8h.js  _chain_message_handler_8h__dep__incl.map  _chain_message_handler_8h__dep__incl.md5  _chain_message_handler_8h__incl.map  _chain_message_handler_8h__incl.md5  _chain_message_handler_8h_source.html  _console_logger_handler_8cpp.html  _console_logger_handler_8cpp__incl.map  _console_logger_handler_8cpp__incl.md5  _console_logger_handler_8h.html  _console_logger_handler_8h.js  _console_logger_handler_8h__dep__incl.map  _console_logger_handler_8h__dep__incl.md5  _console_logger_handler_8h__incl.map  _console_logger_handler_8h__incl.md5  _console_logger_handler_8h_source.html  _file_logger_handler_8cpp.html  _file_logger_handler_8cpp__incl.map  _file_logger_handler_8cpp__incl.md5  _file_logger_handler_8h.html  _file_logger_handler_8h.js  _file_logger_handler_8h__dep__incl.map  _file_logger_handler_8h__dep__incl.md5  _file_logger_handler_8h__incl.map  _file_logger_handler_8h__incl.md5  _file_logger_handler_8h_source.html  _game_agent_message_handler_8cpp.html  _game_agent_message_handler_8cpp.js  _game_agent_message_handler_8cpp__incl.map  _game_agent_message_handler_8cpp__incl.md5  _game_agent_message_handler_8h.html  _game_agent_message_handler_8h.js  _game_agent_message_handler_8h__dep__incl.map  _game_agent_message_handler_8h__dep__incl.md5  _game_agent_message_handler_8h__incl.map  _game_agent_message_handler_8h__incl.md5  (+305 more)
doxygen/web_service/html/: _check_fail_exception_8cpp.html  _check_fail_exception_8cpp__incl.map  _check_fail_exception_8cpp__incl.md5  _check_fail_exception_8h.html  _check_fail_exception_8h.js  _check_fail_exception_8h__dep__incl.map  _check_fail_exception_8h__dep__incl.md5  _check_fail_exception_8h__incl.map  _check_fail_exception_8h__incl.md5  _check_fail_exception_8h_source.html  _command_exception_8cpp.html  _command_exception_8cpp__incl.map  _command_exception_8cpp__incl.md5  _command_exception_8h.html  _command_exception_8h.js  _command_exception_8h__dep__incl.map  _command_exception_8h__dep__incl.md5  _command_exception_8h__incl.map  _command_exception_8h__incl.md5  _command_exception_8h_source.html  _condition_exception_8cpp.html  _condition_exception_8cpp__incl.map  _condition_exception_8cpp__incl.md5  _condition_exception_8h.html  _condition_exception_8h.js  _condition_exception_8h__dep__incl.map  _condition_exception_8h__dep__incl.md5  _condition_exception_8h__incl.map  _condition_exception_8h__incl.md5  _condition_exception_8h_source.html  _fallback_logger_8cpp.html  _fallback_logger_8cpp__incl.map  _fallback_logger_8cpp__incl.md5  _fallback_logger_8h.html  _fallback_logger_8h.js  _fallback_logger_8h__dep__incl.map  _fallback_logger_8h__dep__incl.md5  (+1319 more)
logger_service/: CMakeLists.txt  main.cpp
logger_service/core/Commands/: InitIoCContainerCommand.cpp  InitIoCContainerCommand.h  RegisterLoggerCommand.cpp  RegisterLoggerCommand.h
logger_service/core/IoCContainer/: CMakeLists.txt  IoCConnectContainerCommand.cpp  ScopeTree.cpp  ScopeTree.h
logger_service/core/IoCContainer/Commands/: IoCChangeCurrentScopeCommand.h  IoCRegisterCommand.cpp  IoCScopeNewCommand.cpp  IoCScopeNewCommand.h
logger_service/core/IoCContainer/IoCCore/: CMakeLists.txt  IIoCContainer.h  IoC.h  IoCException.h
logger_service/endpoint/: CMakeLists.txt  GameAgentMessageHandler.cpp  GameAgentMessageHandler.h  IMessageHandler.h  InterpretCommand.cpp  InterpretCommand.h  KafkaConsumer.cpp  KafkaConsumer.h
logger_service/logger/: ChainMessageHandler.cpp  ChainMessageHandler.h  ConsoleLoggerHandler.cpp  ConsoleLoggerHandler.h  FileLoggerHandler.cpp  FileLoggerHandler.h
web_service/: CMakeLists.txt  main.cpp  rules_config.json
web_service/core/: ICommand.h  ICondition.h  IPlugin.h  UsingPluginsDecorator.cpp  UsingPluginsDecorator.h  UsingThreadScopeDecorator.cpp  UsingThreadScopeDecorator.h
web_service/core/Commands/: RegisterConditionsCommand.cpp  RegisterConditionsCommand.h  RegisterLoggerCommand.cpp  RegisterLoggerCommand.h  RegisterRuleEngineCommand.cpp  RegisterRuleEngineCommand.h
web_service/core/Conditions/: PathNameEqCondition.cpp  PathNameEqCondition.h
web_service/core/Exceptions/: CommandException.cpp  CommandException.h  ConditionException.cpp  ConditionException.h  PluginException.cpp  PluginException.h
web_service/core/IoCContainer/: CMakeLists.txt  IScope.h  IoCConnectContainerCommand.h  Scope.cpp  Scope.h
web_service/core/IoCContainer/Commands/: IoCChangeCurrentScopeCommand.cpp  IoCRegisterCommand.h  IoCScopeDeleteCommand.cpp  IoCScopeDeleteCommand.h
web_service/core/IoCContainer/IoCCore/: CMakeLists.txt  IFunctor.h  IoC.cpp  IoCException.cpp
web_service/http/: HttpServer.cpp  HttpServer.h  IRequestHandler.h  RedirectorRequestHandler.cpp  RedirectorRequestHandler.h
web_service/logger/: CMakeLists.txt  FallbackLogger.cpp  FallbackLogger.h  ILogger.h  KafkaLoggerAdapter.cpp  KafkaLoggerAdapter.h  KafkaProducer.cpp  KafkaProducer.h
web_service/plugins/: IPluginManager.h  IoCPluginManager.cpp  IoCPluginManager.h  connect_ioc_api_dll.h  plugin_api_dll.h
web_service/rules_engine/: IRuleEngine.h  IRuleProvider.h  RuleAstBuilder.cpp  RuleAstBuilder.h  RuleInterpreter.cpp  RuleInterpreter.h
web_service/rules_engine/RuleExpressions/: CheckFailException.cpp  CheckFailException.h  IRuleExpression.h  NestedTarget.cpp  NestedTarget.h  RuleCondition.cpp  RuleCondition.h  RuleInterpreterException.cpp  RuleInterpreterException.h  RuleSet.cpp  RuleSet.h  SingleRule.cpp  SingleRule.h  StringTarget.cpp  StringTarget.h
web_service/utils/: IJsonProvider.h  JsonFileLoader.cpp  JsonFileLoader.h
(+105 files in other folders)
